[tool.poetry]
name = "pycurl"
version = "1.0.0"
description = "A small command line tool to download files."
authors = ["angeldollface"]
readme = "README.markdown"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"